[package]
name = "rust-bot"
version = "0.1.0"
authors = ["Stefan <asandei.stefanel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
hyper-tls = "0.5.0"
isahc = "1.1"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]